[package]
name = "iced_beacon"
description = "A client/server protocol to monitor and supervise iced applications"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
iced_core.workspace = true
iced_core.features = ["serde"]

bincode.workspace = true
futures.workspace = true
log.workspace = true
thiserror.workspace = true

tokio.workspace = true
tokio.features = ["rt", "rt-multi-thread", "net", "sync", "time", "io-util", "macros"]

serde.workspace = true
serde.features = ["derive"]

semver.workspace = true
semver.features = ["serde"]
