[package]
name = "iced_core"
description = "The essential ideas of iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
auto-detect-theme = ["dep:dark-light"]
advanced = []

[dependencies]
bitflags.workspace = true
bytes.workspace = true
glam.workspace = true
lilt.workspace = true
log.workspace = true
num-traits.workspace = true
rustc-hash.workspace = true
smol_str.workspace = true
thiserror.workspace = true
web-time.workspace = true

dark-light.workspace = true
dark-light.optional = true

serde.workspace = true
serde.optional = true
serde.features = ["derive"]
