[package]
name = "iced_debug"
description = "A pluggable API for debugging iced applications"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
enable = ["dep:iced_beacon"]

[dependencies]
iced_core.workspace = true
iced_futures.workspace = true
log.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced_beacon.workspace = true
iced_beacon.optional = true
