[package]
name = "iced_devtools"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
iced_program.workspace = true
iced_widget.workspace = true
iced_debug.workspace = true
