[package]
name = "iced_futures"
description = "Commands, subscriptions, and future executors for iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
thread-pool = ["futures/thread-pool"]

[dependencies]
iced_core.workspace = true

futures.workspace = true
log.workspace = true
rustc-hash.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std.workspace = true
async-std.optional = true
async-std.features = ["unstable"]

smol.workspace = true
smol.optional = true

tokio.workspace = true
tokio.optional = true
tokio.features = ["rt", "rt-multi-thread", "time"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
wasm-timer.workspace = true
