[package]
name = "iced_glow"
version = "0.2.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
description = "A glow renderer for iced"
license = "MIT AND OFL-1.1"
repository = "https://github.com/hecrj/iced"

[features]
canvas = ["iced_graphics/canvas"]
qr_code = ["iced_graphics/qr_code"]
default_system_font = ["iced_graphics/font-source"]
# Not supported yet!
image = []
svg = []

[dependencies]
glow = "0.6"
glow_glyph = "0.4"
glyph_brush = "0.7"
euclid = "0.22"
bytemuck = "1.4"
log = "0.4"

[dependencies.iced_native]
version = "0.4"
path = "../native"

[dependencies.iced_graphics]
version = "0.2"
path = "../graphics"
features = ["font-fallback", "font-icons", "opengl"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
