[package]
name = "iced_glutin"
version = "0.5.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
description = "A glutin runtime for Iced"
license = "MIT"
repository = "https://github.com/iced-rs/iced"
documentation = "https://docs.rs/iced_glutin"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]

[features]
trace = ["iced_winit/trace"]
debug = ["iced_winit/debug"]
system = ["iced_winit/system"]

[dependencies.log]
version = "0.4"

[dependencies.glutin]
version = "0.29"
git = "https://github.com/iced-rs/glutin"
rev = "da8d291486b4c9bec12487a46c119c4b1d386abf"

[dependencies.iced_native]
version = "0.7"
path = "../native"

[dependencies.iced_winit]
version = "0.6"
path = "../winit"
features = ["application"]

[dependencies.iced_graphics]
version = "0.5"
path = "../graphics"
features = ["opengl"]

[dependencies.tracing]
version = "0.1.6"
optional = true