[package]
name = "iced_graphics"
version = "0.8.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
description = "A bunch of backend-agnostic types that can be leveraged to build a renderer for Iced"
license = "MIT"
repository = "https://github.com/iced-rs/iced"
documentation = "https://docs.rs/iced_graphics"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]

[features]
geometry = ["lyon_path"]
opengl = []
image = ["dep:image", "kamadak-exif"]
web-colors = []

[dependencies]
glam = "0.24"
half = "2.2.1"
log = "0.4"
raw-window-handle = "0.5"
thiserror = "1.0"
bitflags = "1.2"

[dependencies.bytemuck]
version = "1.4"
features = ["derive"]

[dependencies.iced_core]
version = "0.9"
path = "../core"

[dependencies.tiny-skia]
version = "0.9"
optional = true

[dependencies.image]
version = "0.24"
optional = true

[dependencies.kamadak-exif]
version = "0.5"
optional = true

[dependencies.lyon_path]
version = "1"
optional = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
