[package]
name = "iced_graphics"
description = "A bunch of backend-agnostic types that can be leveraged to build a renderer for iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
geometry = ["lyon_path"]
opengl = []
image = ["dep:image", "kamadak-exif"]
web-colors = []

[dependencies]
iced_core.workspace = true

bitflags.workspace = true
bytemuck.workspace = true
glam.workspace = true
half.workspace = true
log.workspace = true
raw-window-handle.workspace = true
thiserror.workspace = true
cosmic-text.workspace = true
rustc-hash.workspace = true

lyon_path.workspace = true
lyon_path.optional = true

image.workspace = true
image.optional = true

kamadak-exif.workspace = true
kamadak-exif.optional = true

twox-hash.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
twox-hash.workspace = true
twox-hash.features = ["std"]
